--- a/index.html
+++ b/index.html
@@ -14,66 +14,11 @@
 </head>
 
 <body>
-  <header>
-    <div class="container">
-
-      <nav class="navbar navbar-expand-md navbar-dark bg-primary">
-        <div class="container-fluid">
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/Attractions.html">Attractions</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/Food.html">Food</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li>
-                <a class="dropdown-item" href="#">Action</a>
-              </li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-
-          </div>
-        </div>
-      </nav>
-
-    </div>
-  </header>
-
-  <main>
-    <div class="container">
-      <br>
-      <h1>Dimitris Koupatsiaris</h1>
-      <br>
-
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/2X61DHwtVe4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-          Embedded video
-      </iframe>
-    </div>
-
-    <div class="container">
-      <br>
-      <p>
-        <em>I come from</em> <a href="https://en.wikipedia.org/wiki/Greece">Greece</a>.
-        For those who need a map, <a href="https://upload.wikimedia.org/wikipedia/commons/thumb/4/46/Greece_in_Europe.svg/701px-Greece_in_Europe.svg.png" target="_blank">here</a> it is.</p>
-      <br>
-
-      <p>This is going to become a blog eventually.</p>
-      <br>
-
-    </div>
-  </main>
 
   <div id="myapp"></div>
+
+  <script src="main.js"></script>
+
   <script>
   var app = Elm.Main.init({
     node: document.getElementById('myapp')
