--- a/oldindex.html
+++ b/oldindex.html
@@ -22,6 +22,12 @@
         <div class="col-4 pt-1">
           <a class="link-secondary" href="#">Subscribe tbd</a>
         </div>
+        <div class="col-4 d-flex justify-content-end align-items-center">
+          <a class="link-secondary" href="#" aria-label="Search">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
+          </a>
+          <a class="btn btn-sm btn-outline-secondary" href="#">Sign up tbd</a>
+        </div>
       </div>
     </header>
 
@@ -40,33 +46,29 @@
   <main class="container">
     <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
       <div class="col-md-6 px-0">
-        <strong class="d-inline-block mb-2 text-primary" id="feat-relation"></strong>
-        <h1 class="display-4 fst-italic" id="feat-title"></h1>
-        <p class="blog-post-meta" id="feat-date-author"></p>
-        <p class="lead my-3" id="feat-1st-para"></p>
-        <p class="lead mb-0"><a href="FeaturedPost.html" class="text-white fw-bold" target="_blank">Continue reading...</a></p>
+        <h1 class="display-4 fst-italic">Title of a longer featured blog post</h1>
+        <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
+        <p class="lead mb-0"><a href="#" class="text-white fw-bold">Continue reading...</a></p>
       </div>
     </div>
 
-    <script>
-      const xmlhttp = new XMLHttpRequest();
+    <div class="row mb-2">
+      <div class="col-md-6">
+        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-primary">World</strong>
+            <h3 class="mb-0">Featured post</h3>
+            <div class="mb-1 text-muted">Nov 12</div>
+            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="stretched-link">Continue reading</a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
 
-      xmlhttp.onload = function() {
-        const myObj = JSON.parse(this.responseText);
+          </div>
+        </div>
+      </div>
 
-        document.getElementById("feat-relation").innerHTML = myObj.relation;
-        document.getElementById("feat-title").innerHTML = myObj.title;
-        const dt = new Date(myObj.date);
-        document.getElementById("feat-date-author").innerHTML =
-          "Posted on " + dt.toDateString() + " by " + myObj.author;
-        const paras = myObj.body;
-        document.getElementById("feat-1st-para").innerHTML = paras[0];
-
-      }
-      xmlhttp.open("GET", "https://my-json-server.typicode.com/dkoupats/jsondata/featuredpost");
-      xmlhttp.send();
-
-    </script>
 
 
     <div class="row g-5">
