--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <p class="lead my-3" id="feat-1st-para"></p>
 
-        <p class="lead mb-0"><a href="FeaturedPost.html" class="text-white fw-bold" target="_blank">Continue reading...</a></p>
+        <p class="lead mb-0"><a href="/pages/FeaturedPost.html" class="text-white fw-bold" target="_blank">Continue reading...</a></p>
       </div>
     </div>
 
@@ -80,6 +80,9 @@
       });
 
     </script>
+
+    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6911431433177698304" height="334" width="504" frameborder="0" allowfullscreen="" title="Embedded post">
+    </iframe>
 
 
     <div class="row g-5">
