--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <strong class="d-inline-block mb-2 text-primary" id="feat-relation"></strong>
 
         <p class="blog-post-meta">
-          Posted on <span id="feat-date"></span> by <a href="#" id="feat-author"></a>
+          Posted on <span id="feat-date"></span> by
+          <a href="https://www.linkedin.com/in/dimitris-koupatsiaris-62876641" id="feat-author" target="_blank"></a>
         </p>
 
         <h1 class="display-4 fst-italic" id="feat-title"></h1>
@@ -81,28 +82,14 @@
 
     </script>
 
+    <hr>
+
     <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6911431433177698304" height="334" width="504" frameborder="0" allowfullscreen="" title="Embedded post">
     </iframe>
 
 
-    <div class="row g-5">
-      <div class="col-md-8">
 
-        <article class="blog-post">
-          <h2 class="blog-post-title">Sample blog post</h2>
-          <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
-
-          <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
-          <hr>
-          <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-        </article>
-
-        <nav class="blog-pagination" aria-label="Pagination">
-          <a class="btn btn-outline-primary" href="#">Older</a>
-          <a class="btn btn-outline-secondary disabled">Newer</a>
-        </nav>
-
-      </div>
+    <hr>
 
       <div class="col-md-4">
         <div class="position-sticky" style="top: 2rem;">
@@ -115,22 +102,21 @@
           </div>
 
           <div class="p-4">
-            <h4 class="fst-italic">Archives</h4>
-            <ol class="list-unstyled mb-0">
-              <li><a href="#">March 2021</a></li>
-            </ol>
+            <h4 class="fst-italic">Post Archive</h4>
+            <a href="/pages/Posts.html" target="_blank">Posts</a>
           </div>
 
           <div class="p-4">
             <h4 class="fst-italic">Elsewhere</h4>
             <ol class="list-unstyled">
-              <li><a href="https://github.com/dkoupats">GitHub</a></li>
-              <li><a href="https://twitter.com/dkoupats">Twitter</a></li>
-              <li><a href="https://www.facebook.com/dkoupatsiaris">Facebook</a></li>
+              <li><a href="https://github.com/dkoupats" target="_blank">GitHub</a></li>
+              <li><a href="https://twitter.com/dkoupats" target="_blank">Twitter</a></li>
+              <li><a href="https://www.facebook.com/dkoupatsiaris" target="_blank">Facebook</a></li>
             </ol>
           </div>
         </div>
       </div>
+      
     </div>
 
   </main>
