--- a/pages/Posts.html
+++ b/pages/Posts.html
@@ -12,8 +12,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
   <style>
-    body { background-color: Bisque; }
-    h1 { color: Indigo; margin-left: 40px; }
+    body { background-color: seashell; }
+    h1 { color: navy; margin-left: 40px; }
     ul { list-style-type: none; list-style-position: inside; }
   </style>
 
@@ -23,32 +23,18 @@
 
   <main class="container">
 
+    <h1>Blog Posts</h1>
+
+    <hr>
 
     <div class="row g-5">
       <div class="col-md-8">
 
-        <article class="blog-post">
-          <h2 class="blog-post-title">Sample blog post</h2>
-          <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
-
-          <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
-          <hr>
-          <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-        </article>
-
-        <nav class="blog-pagination" aria-label="Pagination">
-          <a class="btn btn-outline-primary" href="#">Older</a>
-          <a class="btn btn-outline-secondary disabled">Newer</a>
-        </nav>
+        <ul>
+        </ul>
 
       </div>
-
-
-
-    <hr>
-    <ul>
-    </ul>
-
+    </div>
 
     <script>
 
@@ -69,6 +55,7 @@
 
           let item = document.createElement('li');
           let artcl = document.createElement('article');
+          // element.style.padding = "2px 16px"
 
           let ttl = document.createElement('h2');
           ttl.innerHTML = post.title;
