--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <!-- Header -->
       <header class="w3-container w3-center w3-padding-32">
         <h1><b>MY BLOG</b></h1>
-        <p>Welcome to the blog of <span class="w3-tag">unknown</span></p>
+        <p>Welcome to the blog of <span class="w3-tag">Dimitris Koupatsiaris</span></p>
       </header>
 
       <!-- Grid -->
@@ -58,7 +58,33 @@
               </div>
             </div>
           </div>
+          <hr>
 
+          <!-- Blog entry -->
+          <div class="w3-card-4 w3-margin w3-white">
+            <img src="/images/bridge.jpg" alt="Norway" style="width:100%">
+            <div class="w3-container">
+              <h3><b>BLOG ENTRY</b></h3>
+              <h5>Title description, <span class="w3-opacity">April 2, 2014</span></h5>
+            </div>
+
+            <div class="w3-container">
+              <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. 
+                Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, 
+                ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. 
+                Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, 
+                porta lectus vitae, ultricies congue gravida diam non fringilla.
+              </p>
+              <div class="w3-row">
+                <div class="w3-col m8 s12">
+                  <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
+                </div>
+                <div class="w3-col m4 w3-hide-small">
+                  <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-badge">2</span></span></p>
+                </div>
+              </div>
+            </div>
+          </div>
           <hr>
 
           <!-- Blog entry -->
