--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <style>
     body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
@@ -184,7 +185,7 @@
                   <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">News</span>
                   <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Clothing</span>
                   <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Shopping</span>
-                  <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Sports</span>
+                  <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Travel</span>
                   <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Games</span>
                 </p>
               </div>
@@ -204,6 +205,10 @@
     </footer>
     
   </body>
+
+
+
+
 
 <div class="container">
     <header class="blog-header py-3">
