--- a/index.html
+++ b/index.html
@@ -200,8 +200,16 @@
 
     <!-- Footer -->
     <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
-      <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
-      <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
+      <a href="https://www.facebook.com/dkoupatsiaris">
+        <i class="fa fa-facebook-official w3-hover-opacity"></i>
+        <span class="fa fa-facebook"></span>
+      </a>
+      
+      <i class="fa fa-instagram w3-hover-opacity"></i>
+      <i class="fa fa-snapchat w3-hover-opacity"></i>
+      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+      <i class="fa fa-twitter w3-hover-opacity"></i>
+      <i class="fa fa-linkedin w3-hover-opacity"></i>
     </footer>
     
   </body>
