--- a/index.html
+++ b/index.html
@@ -203,14 +203,35 @@
 
       <a href="https://www.facebook.com/dkoupatsiaris">
         <i class="fa fa-facebook-official w3-hover-opacity"></i>
-        <span class="fa fa-facebook"></span>
+        Facebook
       </a>
+      <a href="https://www.instagram.com">
+        <i class="fa fa-instagram w3-hover-opacity"></i>
+        Instagram
+      </a>
+      <a href="https://www.twitter.com/dkoupats">
+        <i class="fa fa-twitter w3-hover-opacity"></i>
+        Twitter
+      </a>
+      <a href="https://www.linkedin.com/in/dimitris-koupatsiaris-msc-ee-pmp-62876641/">
+        <i class="fa fa-linkedin w3-hover-opacity"></i>
+        LinkedIn
+      </a>
+      <hr>
+
+      <div class="">
+        <p>&copy; Copyright 
+          <a href="https://sites.google.com/datahermeneutics.com/welcome">
+            Data Hermeneutics
+          </a>. 
+          All right reserved.<br>
+          mail: 
+            <a href="mailto:dkoupats@datahermeneutics.com">
+              dkoupats@datahermeneutics.com
+            </a> 
+        </p>
+      </div>      
       
-      <i class="fa fa-instagram w3-hover-opacity"></i>
-      <i class="fa fa-snapchat w3-hover-opacity"></i>
-      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-      <i class="fa fa-twitter w3-hover-opacity"></i>
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
     </footer>
 
   </body>
