--- a/index.html
+++ b/index.html
@@ -201,22 +201,24 @@
     <!-- Footer -->
     <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
 
-      <a href="https://www.facebook.com/dkoupatsiaris">
-        <i class="fa fa-facebook-official w3-hover-opacity"></i>
-        Facebook
-      </a>
-      <a href="https://www.instagram.com">
-        <i class="fa fa-instagram w3-hover-opacity"></i>
-        Instagram
-      </a>
-      <a href="https://www.twitter.com/dkoupats">
-        <i class="fa fa-twitter w3-hover-opacity"></i>
-        Twitter
-      </a>
-      <a href="https://www.linkedin.com/in/dimitris-koupatsiaris-msc-ee-pmp-62876641/">
-        <i class="fa fa-linkedin w3-hover-opacity"></i>
-        LinkedIn
-      </a>
+      <div class="w3-bar">
+        <a href="https://www.facebook.com/dkoupatsiaris">
+          <i class="fa fa-facebook-official w3-hover-opacity"></i>
+          Facebook
+        </a>
+        <a href="https://www.instagram.com">
+          <i class="fa fa-instagram w3-hover-opacity"></i>
+          Instagram
+        </a>
+        <a href="https://www.twitter.com/dkoupats">
+          <i class="fa fa-twitter w3-hover-opacity"></i>
+          Twitter
+        </a>
+        <a href="https://www.linkedin.com/in/dimitris-koupatsiaris-msc-ee-pmp-62876641/">
+          <i class="fa fa-linkedin w3-hover-opacity"></i>
+          LinkedIn
+        </a>        
+      </div>
       <hr>
 
       <div class="">
