--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <div class="w3-col l8 s12">
           
           <!-- Blog entry -->
-          <div class="w3-card-4 w3-margin w3-white">
+          <div class="w3-card-4 w3-margin w3-white" id="blog1">
             <img src="/images/woods.jpg" alt="Nature" style="width:100%">
             <div class="w3-container">
-              <h3><b>TITLE HEADING</b></h3>
+              <h3 id="blog1-title"><b></b></h3>
               <h5>Title description, <span class="w3-opacity">April 7, 2014</span></h5>
             </div>
 
@@ -53,7 +53,7 @@
               </div>
               <div class="w3-col m4 w3-hide-small">
                 <p><span class="w3-padding-large w3-right">
-                  <b>Comments  </b>
+                  <b>Comments</b>
                   <span class="w3-tag">0</span></span>
                 </p>
               </div>
@@ -61,6 +61,13 @@
           </div>
 
           <script>
+
+            $(document).ready(function(){
+
+              $("#blog1-title").load("FirstArticle.txt").$("#title");
+
+            });
+
           </script>
           <hr>
 
@@ -128,8 +135,8 @@
             
             <div class="w3-container w3-white">
               <h4><b>Dimitris Koupatsiaris</b></h4>
-              <p>After a career as a a Naval Engineer, I decided to tackle the field of Data Science and web development, 
-                utilizing my knowledge and experience in the fields of statistics and machine learning. 
+              <p>
+                After a career as a Naval Engineer, I decided to tackle the fields of Data Science and Web Development. 
               </p>
             </div>
           </div>
@@ -140,6 +147,7 @@
             <div class="w3-container w3-padding">
               <h4>Popular Posts</h4>
             </div>
+
             <ul class="w3-ul w3-hoverable w3-white">
               <li class="w3-padding-16">
                 <img src="/images/workshop.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
