last change for today

--- a/Papers/EnergySecurity.html
+++ b/Papers/EnergySecurity.html
@@ -798,7 +798,7 @@
           all three inflection points to be tangent to the slope that defines stable production growth, 
           as it is illustrated in Figure 3. 
           Thus \( F_2 (x) =1.2 \cdot  F ( \infty, \mu = 2050, s=25 ) \), and \( F_3 (x) =1.4 \cdot  F ( \infty, \mu = 2062, s=25 ) \). 
-          Finally, Equation 3 illustrates the evolution of the resource cost per unit in reference to the inflection points 
+          Finally, <a href="#eq3">Equation 3<cite></cite></a> illustrates the evolution of the resource cost per unit in reference to the inflection points 
           (x1=1990, x2=2026, x3=2043) as:
         </p>
 
@@ -814,6 +814,31 @@
             \end{cases} 
 
           \]
+        </p>
+
+        <p>
+          The cost points C(1990), C(2026), and C(2043) constitute a geometric progression with ratio r=1.2. 
+          Although this scenario is simplistic, in a more generic case the progression will have the form 
+          \( C_n = r_n \cdot C_{n-1} , r_n>1 , n \in \mathbb{N} \). 
+          To summarize, the cost per unit of a resource, which is in the process of expanding the reserves 
+          to maintain a stable production growth, follows a geometric progression with ratio larger than 1. 
+        </p>
+
+        <p>
+          
+        </p>
+
+        <p>
+          In reality problems are more complicated, since cost estimates can be verified only after extraction 
+          commenced and matured, technology evolves and new methods reduce extraction cost, new networks reduce the 
+          transportation cost per unit, and many more factors formulate the final resource price as a commodity. 
+          However the principle remains the same, that if we know the extraction cost of the reservoirs of a finite resource, 
+          we can predict with high confidence the resource commodity price in the following years, 
+          which will resemble a polynomial growth curve. 
+          Thus, the knowledge of resource peaking time becomes less critical than the price evolution itself. 
+          The estimation of the price evolution can be used when calculating the life cycle cost of a system under design, 
+          and together with the severity that the price will cause in the system's future operations, 
+          constitute a risk that has to be managed. 
         </p>
 
 
@@ -837,20 +862,9 @@
 
 
 
-The cost points C(1990), C(2026), and C(2043) constitute a geometric progression with ratio r=1.2. Although
-this scenario is simplistic, in a more generic case the progression will have the form 1, 1, n n n n C r C r n     . To
-summarize, the cost per unit of a resource, which is in the process of expanding the reserves to maintain a stable
-production growth, follows a geometric progression with ratio larger than 1.
+
 Figure 3 Subsequent Resource Curves that meet Stable Growth Demands
-In reality problems are more complicated, since cost estimates can be verified only after extraction
-commenced and matured, technology evolves and new methods reduce extraction cost, new networks reduce the
-transportation cost per unit, and many more factors formulate the final resource price as a commodity. However the
-principle remains the same, that if we know the extraction cost of the reservoirs of a finite resource, we can predict
-with high confidence the resource commodity price in the following years, which will resemble a polynomial growth
-curve. Thus, the knowledge of resource peaking time becomes less critical than the price evolution itself. The
-estimation of the price evolution can be used when calculating the life cycle cost of a system under design, and
-together with the severity that the price will cause in the system’s future operations, constitute a risk that has to be
-managed.
+
 OVERVIEW OF SYSTEMS ENGINEERING
 Systems engineering is an interdisciplinary field of engineering that focuses on how to design and manage
 complex engineering systems over their life cycles. As such, it is a methodical, disciplined approach for the design,
