--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
           <!-- About Card -->
           <div class="w3-card w3-margin w3-margin-top">
-            <img src="/images/cern.jpg" style="width: 400px" class="w3-image">
+            <img src="/images/IMG_0540.jpg" style="width: 400px" class="w3-image">
             
             <div class="w3-container w3-white">
               <h4><b>Dimitris Koupatsiaris</b></h4>
