--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- Header -->
       <header class="w3-container w3-center w3-padding-32">
         <h1><b>MY BLOG</b></h1>
-        <p>Welcome to the blog of <span class="w3-tag">Dimitris Koupatsiaris</span></p>
+        <p>Welcome to my blog</p>
       </header>
 
       <!-- Grid -->
@@ -249,18 +249,6 @@
         <!-- Introduction menu -->
         <div class="w3-col">
 
-          <!-- About Card -->
-          <div class="w3-card w3-margin w3-margin-top">
-            <img src="/images/IMG_0540.jpg" style="width: 400px" class="w3-image">
-            
-            <div class="w3-container w3-white">
-              <h4><b>Dimitris Koupatsiaris</b></h4>
-              <p>
-                After a career as a Naval Engineer, I decided to address the fields of Data Science and Web Development. 
-              </p>
-            </div>
-          </div>
-          <hr>
 
           <!-- Papers -->
           <div class="w3-auto w3-margin">
