last name removal

--- a/Papers/EnergySecurity.html
+++ b/Papers/EnergySecurity.html
@@ -84,11 +84,8 @@
 
       <div id="author">
         <details>
-          <p><b><summary>Dimitrios Koupatsiaris</summary></b></p>
-          <p>Dimitrios Koupatsiaris is an Officer (Engineer) with the Hellenic Navy, Greece, 
-            holding the rank of Commander, currently posted in NATO HQ JFC Brunssum. 
-            None of the contents of this paper are endorsed, neither form the Hellenic Navy, 
-            nor NATO.</p>
+          <p><b><summary>Dimitris</summary></b></p>
+          <p>The contents of this paper express only personal opinions.</p>
         </details>
 
         <details>
