--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
     <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
 
       <div class="w3-bar">
-        <a href="https://www.facebook.com/dkoupatsiaris">
+        <a href="https://www.facebook.com/">
           <i class="fa fa-facebook-official w3-hover-opacity"></i>
           Facebook
         </a>
@@ -352,25 +352,18 @@
           <i class="fa fa-instagram w3-hover-opacity"></i>
           Instagram
         </a>
-        <a href="https://www.twitter.com/dkoupats">
+        <a href="https://www.twitter.com/">
           <i class="fa fa-twitter w3-hover-opacity"></i>
           Twitter
         </a>
-        <a href="https://www.linkedin.com/in/dimitris-koupatsiaris-msc-ee-pmp-62876641/">
+        <a href="https://www.linkedin.com/">
           <i class="fa fa-linkedin w3-hover-opacity"></i>
           LinkedIn
         </a>        
       </div>
       <hr>
 
-      <p>&copy; Copyright 
-        <a href="https://sites.google.com/datahermeneutics.com/welcome">
-          Data Hermeneutics
-        </a>. 
-        Mail to: <a href="mailto:dkoupats@datahermeneutics.com">dkoupats@datahermeneutics.com</a> 
-      </p>
-      <p>
-      </p>
+      <p>&copy; Copyright Dimitris</p>
       
     </footer>
     
